GitVersion1/objects/Consumer__c.object
<CustomObject>
    <fields>
        <fullName>Account_Standard_Commercial_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold the Commercial Type Account details</description>
        <label>Commercial Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType__c</field>
                <operation>equals</operation>
                <value>Commercial Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType__c</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>Consumer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer_Name__c</fullName>
        <description>To show Commercial Customer Account Name</description>
        <formula>Account_Standard_Commercial_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Name__c</fullName>
        <description>To Show Consumer Account Name</description>
        <formula>Consumer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Hold Consumer Account details</description>
        <label>Consumer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Consumer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Commercial_Customer__c</fullName>
        <description>To Show Parent Name of the Commercial Customer Account</description>
        <formula>Account_Standard_Commercial_Customer__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Commercial Customer</label>
        <type>Text</type>
    </fields>
    <label>Consumer/Customer</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumers/Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>